# air

./: .dockerignore  .gitignore  Dockerfile  README.md  config.json.example  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.cursor/rules/: arch.mdc
app/: config.py
app/db/: __init__.py
app/models/: flights.py  openrouter.py  twogis.py  weather.py  widgets.py
app/routers/: __init__.py  flights.py  openrouter.py  twogis.py  weather.py  widgets.py
app/services/: aviaradar.py  openmeteo.py  openrouter.py  twogis.py
deploy/: README.md  air.service  deploy.sh  docker-compose.service  nginx.conf
docs/: draft_contract.json  widgets_api.md
tests/: conftest.py  test_config.py  test_flights.py  test_openrouter.py  test_twogis.py  test_weather.py  test_widgets.py
