[project]
name = "air"
version = "2.0.0"
description = "REST API сервер с различными функциями для получения информации"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]

